--- a/signin.html
+++ b/signin.html
@@ -123,6 +123,22 @@
         color: grey;
     }
 
+    .login-button {
+        display: block;
+        width: 60%;
+        margin: 0 auto;
+        background: #F89509;
+        color: white;
+        padding: 12px;
+        border: none;
+        border-radius: 4px;
+        cursor: pointer;
+        font-weight: 600;
+        font-size: 16px;
+        text-align: center;
+        text-decoration: none;
+    }
+
     /* dont't have an account? */
     .login-opt{
         font-size: 1.2rem;
@@ -215,7 +231,7 @@
                 <p class="login-opt">Don't have an account? <button class="toggle-btn" onclick="showForm('signup')">Sign Up</button></p>
 
                 <!-- "submit btn" -->
-                <button type="submit">Login</button>
+                <a href="dashboard.html" class="login-button">Login</a>
 
                 <p class="login-opt">Or Login using</p>
                 <div class="flex-icons">
