--- a/about.html
+++ b/about.html
@@ -936,7 +936,7 @@
 
    /* Footer */
    .footer {
-            background-color: #4c2b03;
+            background-color: #492207;
             color: white;
             padding: 40px 10%;
         }
@@ -1340,7 +1340,7 @@
             <div class="footer-logo-col">
                 <div class="footer-col">
                     <div class="footer-logo">
-                        <img src="assests/Emailing afrihustle logo with name and WBG_.png" alt="AfriHustle Logo" />
+                        <img src="assests/logo2.jpeg" alt="AfriHustle Logo" />
                     </div>
                 </div>
                 
@@ -1360,6 +1360,7 @@
                     <li class="footer-link"><a href="#">FAQs</a></li>
                     <li class="footer-link"><a href="support.html">Support</a></li>
                     <li class="footer-link"><a href="blog.html">Blog</a></li>
+                    <li class="footer-link"><a href="events.html">Events</a></li>
                 </ul>
             </div>
             
