--- a/contact.html
+++ b/contact.html
@@ -294,7 +294,7 @@
     /* Footer Styles */
     /* Footer Styles */
 .footer {
-    background-color: var(--brown);
+    background-color: #492207;
     color: white;
     padding: 60px 10% 30px;
 }
@@ -579,7 +579,7 @@
         <div class="footer-logo-col">
             <div class="footer-col">
                 <div class="footer-logo">
-                    <img src="assests/Emailing afrihustle logo with name and WBG_.png" alt="AfriHustle Logo" />
+                    <img src="assests/logo2.jpeg" alt="AfriHustle Logo" />
                 </div>
             </div>
             
@@ -599,6 +599,7 @@
                 <li class="footer-link"><a href="#">FAQs</a></li>
                 <li class="footer-link"><a href="support.html">Support</a></li>
                 <li class="footer-link"><a href="blog.html">Blog</a></li>
+                <li class="footer-link"><a href="events.html">Events</a></li>
             </ul>
         </div>
         
