--- a/dashboard.html
+++ b/dashboard.html
@@ -75,7 +75,7 @@
       left: 0;
       width: 100%;
       height: 100%;
-      background: #53bda5;
+      background: #009883;
       z-index: -1;
     }
 
@@ -1059,7 +1059,7 @@
             </a>
           </li>
           <li>
-            <a href="#">
+            <a href="wallet.html">
               <i class="fas fa-wallet"></i>
               <span>My Wallet</span>
             </a>
