--- a/login.html
+++ b/login.html
@@ -211,11 +211,11 @@
         <a href="forgot.html">Forgot password?</a>
       </div>
 
-      <div class="signup-link">
+      <div class="signup.html">
         Don’t have an account? <a href="#">Sign up</a>
       </div>
 
-      <button class="login-btn">Login →</button>
+      <button class="dashboard.html">Login →</button>
 
       <div class="social-login">
         <p>Or Login using</p>
