--- a/signin.html
+++ b/signin.html
@@ -231,7 +231,7 @@
                 <p class="login-opt">Don't have an account? <button class="toggle-btn" onclick="showForm('signup')">Sign Up</button></p>
 
                 <!-- "submit btn" -->
-                <a href="dashboard.html" class="login-button">Login</a>
+                <a href="" class="login-button">Login</a>
 
                 <p class="login-opt">Or Login using</p>
                 <div class="flex-icons">
