--- a/contact.html
+++ b/contact.html
@@ -494,7 +494,7 @@
             </a>
           </div>
           <div class="auth-buttons">
-            <a href="signin.html" class="btn btn-outline">Signin <i class="fas fa-sign-in-alt"></i></a>
+            <a href="login.html" class="btn btn-outline">Signin <i class="fas fa-sign-in-alt"></i></a>
             <a href="/signup" class="btn btn-primary">Signup <i class="fas fa-user-plus"></i></a>
           </div>
           </div>
