--- a/about.html
+++ b/about.html
@@ -1124,7 +1124,7 @@
                 <a href="contact.html" class="nav-link">Contact</a>
             </div>
             <div class="auth-buttons">
-                <a href="login.html" class="btn btn-outline">Signin <i class="fas fa-sign-in-alt"></i></a>
+                <a href="signin.html" class="btn btn-outline">Signin <i class="fas fa-sign-in-alt"></i></a>
                 <a href="/signup" class="btn btn-primary">Signup <i class="fas fa-user-plus"></i></a>
               </div>
         </div>
