--- a/signin.html
+++ b/signin.html
@@ -342,7 +342,7 @@
                     <a href="forgot-password.html">Forgot password?</a>
                 </div>
                 
-                <button class="dashboard.html">Login →</button>
+                <a href="dashboard.html" class="login-btn">Login →</a>
                 
                 <div class="signup-link">
                     Don't have an account? <a href="signup.html">Sign up</a>
