--- a/createAccount.html
+++ b/createAccount.html
@@ -192,7 +192,7 @@ body {
   <div class="container">
     <!-- Left Section: Create Account -->
     <div class="form-section">
-      <button class="back-button"><i class="fa fa-arrow-left"></i><a href="../AfriHustle_Project/signup.html">Back</a> </button>
+      <button class="back-button"><i class="fa fa-arrow-left"></i><a href="signup.html">Back</a> </button>
       <div class="profile-picture">
         <img src="./Assets/Logo.jpg" alt="Profile Picture">
       </div>
@@ -262,8 +262,8 @@ body {
             </div>
           </div>
         </div>
-        <button class="signup-button">Signup <i class="fa fa-arrow-right"></i></button>
-        <p>Have an account already? <a href="#">Login</a></p>
+       <a href="signup.html" class="signup-button">Signup <i class="fa fa-arrow-right"></i></a>
+        <p>Have an account already? <a href="signin.html">Login</a></p>
       </form>
     </div>
 
