sign-up error fixed

--- a/Authentication_Pages/sign-up_as_service_provider.html
+++ b/Authentication_Pages/sign-up_as_service_provider.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Create Account As A Service Provider</title>
+    <title>Signup as a service provider</title>
    <link rel="stylesheet" href="sign-up_as_service_provider.css">
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
@@ -13,7 +13,7 @@
         <!--  -->
 
         <!-- LOGO -->
-        <div class="logo"><img src="images/1744220397011.jpg" alt="Afrihustle_logo">
+        <div class="logo"><img src="auth-images/logo.svg" alt="Afrihustle_logo">
         </div>
         
         
@@ -193,7 +193,7 @@
     </div>
 
     <div class="hero-sec">
-        <img src="images/1744220258854.jpg" alt="hero_image">
+        <img src="auth-images/IMG-20250403-WA0032.jpg" alt="hero_image">
 
         <h2 class="heading">Welcome to <span style="font-size: 36px; color: #f89509; font-weight: bold;">Afrihustle</span>, linking talent and opportunities</h2>
         <p style="line-height: 1.8rem;
