--- a/index.html
+++ b/index.html
@@ -1257,8 +1257,8 @@
           <a href="contact.html" class="nav-link">Contact</a>
         </div>
         <div class="auth-buttons">
-          <a href="signin.html" class="btn btn-outline">Signin <i class="fas fa-sign-in-alt"></i></a>
-          <a href="/signup" class="btn btn-primary">Signup <i class="fas fa-user-plus"></i></a>
+          <a href="Authentication_Pages/login.html" class="btn btn-outline">Signin <i class="fas fa-sign-in-alt"></i></a>
+          <a href="Authentication_Pages/createaccount.html" target="_blank" class="btn btn-primary">Signup <i class="fas fa-user-plus"></i></a>
         </div>
       </div>
     </nav>
