--- a/Authentication_Pages/createaccount.html
+++ b/Authentication_Pages/createaccount.html
@@ -95,6 +95,10 @@
             background-color: #FFA726;
             color: white;
         }
+
+        .btn-primary:hover{
+         background-color:#FF6B00;
+        } 
         
         .btn-outline {
             background-color: transparent;
