--- a/signup.html
+++ b/signup.html
@@ -253,7 +253,7 @@
             <a href="sign-up_as_service_provider.html" class="button button-outline">
                 As a service provider <span class="arrow-icon">→</span>
             </a>
-            <p class="signin-text">Have an account already? <a href="login.html" class="signin-link">Sign in</a></p>
+            <p class="signin-text">Have an account already? <a href="signin.html" class="signin-link">Sign in</a></p>
         </div>
         
         <div class="right-panel">
