--- a/signup.html
+++ b/signup.html
@@ -250,7 +250,7 @@
             <a href="createAccount.html" class="button">
                 As an employer <span class="arrow-icon">→</span>
             </a>
-            <a href="Authentication_Pages/sign-up_as_service_provider.html" class="button button-outline">
+            <a href="../Authentication_Pages/sign-up_as_service_provider.html" class="button button-outline">
                 As a service provider <span class="arrow-icon">→</span>
             </a>
             <p class="signin-text">Have an account already? <a href="signin.html" class="signin-link">Sign in</a></p>
