--- a/signin.html
+++ b/signin.html
@@ -339,7 +339,7 @@
                     </div>
                 </div>
                 <div class="forgot-password">
-                    <a href="forgot-password.html">Forgot password?</a>
+                    <a href="../Authentication_Pages/forgot-password.html">Forgot password?</a>
                 </div>
                 
                 <a href="dashboard.html" class="login-btn">Login →</a>
