--- a/Authentication_Pages/sign-up_as_service_provider.html
+++ b/Authentication_Pages/sign-up_as_service_provider.html
@@ -187,7 +187,7 @@
             </div>
             
             <div class="haveAnAcct" >
-                <p style="color: #fff;">Have an acccount already? <a href="../AfriHustle_Project/signin.html" style="color: #f89509;">Login</a></p>
+                <p style="color: #fff;">Have an acccount already? <a href="signin.html" style="color: #f89509;">Login</a></p>
             </div>
         </form>
     </div>
