--- a/Authentication_Pages/sign-up_as_service_provider.html
+++ b/Authentication_Pages/sign-up_as_service_provider.html
@@ -645,7 +645,7 @@ h2{
         <img src="images/1744220258854.jpg" alt="hero_image">
 
         <h2 class="heading">Welcome to <span style="font-size: 36px; color: #f89509; font-weight: bold;">Afrihustle</span>, linking talent and opportunities</h2>
-        <p style="line-height: 1.8rem; margin-top: 1.4rem;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur distinctio natus sunt reprehenderit! Expedita, modi vel! Magni provident architecto est nostrum quis veniam nihil hic temporibus praesentium velit? Velit, sit.</p>
+        <p style="line-height: 1.8rem; margin-top: 1.4rem;">Join AfrHustle and connect to job opportunities, financial services, and skill development tailored for informal workers, gig workers, and artisans across Africa.</p>
 
         <div class="page-next-indi">
             <div class="circle" style="width: 1.4rem; height: 1.4rem; border-radius: 50%; background-color: #ddd; margin-right: 6px;"></div>
@@ -660,7 +660,7 @@ h2{
             <i class="fas fa-check-circle"></i>
             <h3>Account Created Successfully!</h3>
             <p>Your account has been created. You can now login to access your dashboard.</p>
-            <a href="signin.html" class="popup-btn">Login</a>
+            <a href="../signin.html" class="popup-btn">Login</a>
         </div>
     </div>
 
