--- a/createAccount.html
+++ b/createAccount.html
@@ -35,7 +35,7 @@
     .form-section {
       width: 50%;
       padding: 40px;
-      background-color: #007b5e;
+      background-color: #00a99d;
       color: #ffffff;
       display: flex;
       flex-direction: column;
