--- a/login.html
+++ b/login.html
@@ -61,7 +61,7 @@
 /* Right */
 .right-section {
   flex: 1;
-  background-color: #007b5e;
+  background-color: #00a99d;
   color: #ffffff;
   padding: 40px;
   display: flex;
