--- a/createAccount.html
+++ b/createAccount.html
@@ -62,9 +62,11 @@
     .profile-picture img {
       width: 80px;
       height: 80px;
-      border-radius: 50%; /* Changed to make logo round */
+      border-radius: 50%;
       margin-bottom: 30px;
       object-fit: cover;
+      border: 4px solid orange; /* Added orange border */
+      box-shadow: 0 0 10px rgba(255, 165, 0, 0.3); /* Optional: subtle glow effect */
     }
 
     .create-account-form h2 {
