--- a/Authentication_Pages/login.html
+++ b/Authentication_Pages/login.html
@@ -303,7 +303,7 @@
 <body>
     <div class="container">
         <div class="left-panel">
-            <img src="Assets/Artist.jpg" alt="Artist with painting" class="artist-image">
+            <img src="Artist.jpg" alt="Artist with painting" class="artist-image">
             <h1>Welcome To <span>Afrihustle</span>, Linking Talent And Opportunities</h1>
             <p>Join Afrihustle and connect to job opportunities, financial services, and skill-development tailored for informal workers, gig workers, and artisans across Africa.</p>
             <div class="pagination">
@@ -315,7 +315,7 @@
         <div class="right-panel">
             <div class="logo-container">
                 <div class="logo">
-                    <img src="Assets/Logo.jpg" alt="Afrihustle Logo">
+                    <img src="Logo.jpg" alt="Afrihustle Logo">
                 </div>
                 <h2>Login To Your Account</h2>
             </div>
