--- a/Authentication_Pages/login.html
+++ b/Authentication_Pages/login.html
@@ -315,7 +315,7 @@
         <div class="right-panel">
             <div class="logo-container">
                 <div class="logo">
-                    <img src="Logo.jpg" alt="Afrihustle Logo">
+                    <img src="../assests/logo2.jpeg" alt="Afrihustle Logo">
                 </div>
                 <h2>Login To Your Account</h2>
             </div>
