--- a/Authentication_Pages/login.html
+++ b/Authentication_Pages/login.html
@@ -72,8 +72,9 @@
         }
 
         .logo img {
-            width: 90%;
-            height: auto;
+            width: 80px;
+            height: 80px;
+            border-radius: 50%;
         }
 
         .artist-image {
@@ -81,6 +82,7 @@
             max-width: 250px;
             border-radius: 8px;
             margin-bottom: 1.5rem;
+            display: block;
         }
 
         h1 {
@@ -303,7 +305,7 @@
 <body>
     <div class="container">
         <div class="left-panel">
-            <img src="Artist.jpg" alt="Artist with painting" class="artist-image">
+            <img src="../assests/1e830a807e3e454ed2ae9b051283de04.jpg" alt="Artist with painting" class="artist-image">
             <h1>Welcome To <span>Afrihustle</span>, Linking Talent And Opportunities</h1>
             <p>Join Afrihustle and connect to job opportunities, financial services, and skill-development tailored for informal workers, gig workers, and artisans across Africa.</p>
             <div class="pagination">
