--- a/index.html
+++ b/index.html
@@ -1402,7 +1402,7 @@
               </li>
             </ul>
             <div class="buttons-container">
-              <a href="#" class="get-started-btn filled">Get Started →</a>
+              <a href="signin.html" class="get-started-btn filled">Get Started →</a>
               <a href="#" class="get-started-btn">Download App →</a>
             </div>
           </div>
@@ -1424,7 +1424,7 @@
               <h2 class="brand-name">AfriHustle</h2>
               <p class="brand-tagline">Real Stories. Real Impact</p>
               <div class="header-buttons">
-                <a href="#" class="get-started-btn filled">Get Started →</a>
+                <a href="signin.html" class="get-started-btn filled">Get Started →</a>
                 <a href="#" class="get-started-btn outline">Learn More →</a>
               </div>
             </div>
