--- a/portfolio.html
+++ b/portfolio.html
@@ -541,7 +541,7 @@ footer {
     <img src="assests/Emailing afrihustle logo with name and WBG_.png" alt="Logo" class="logo">
     <div class="nav-links">
       <a href="dashboard.html" class="dashboard-btn">Dashboard</a>
-      <img src="assests/profile.jpg" alt="Profile" class="profile-img">
+      <img src="assests/midjourney (1).jpg" alt="Profile" class="profile-img">
     </div>
   </nav>
 
