--- a/recommendation.html
+++ b/recommendation.html
@@ -476,18 +476,7 @@
           <span>View Applications</span>
         </a>
       </li>
-      <li class="nav-item active">
-        <a href="recommendation.html">
-          <i class="fas fa-users"></i>
-          <span>Workers Recommendations</span>
-        </a>
-      </li>
-      <li class="nav-item">
-        <a href="payment-summary.html">
-          <i class="fas fa-credit-card"></i>
-          <span>Payment Summary</span>
-        </a>
-      </li>
+      
       <li class="nav-item">
         <a href="my-wallet.html">
           <i class="fas fa-wallet"></i>
@@ -555,9 +544,9 @@
       <!-- Worker Card 1 -->
       <div class="worker-card">
         <div class="worker-header">
-          <img src="https://randomuser.me/api/portraits/men/32.jpg" alt="Worker" class="worker-avatar">
+          <img src="assests/chidi salmon.jpg" alt="Worker" class="worker-avatar">
           <div class="worker-info">
-            <h3>Michael Johnson</h3>
+            <h3>Chidi Salmon</h3>
             <p>Construction Worker</p>
             <div class="worker-rating">
               <i class="fas fa-star"></i>
@@ -585,9 +574,9 @@
       <!-- Worker Card 2 -->
       <div class="worker-card">
         <div class="worker-header">
-          <img src="https://randomuser.me/api/portraits/women/44.jpg" alt="Worker" class="worker-avatar">
+          <img src="assests/profile.jpg" alt="Worker" class="worker-avatar">
           <div class="worker-info">
-            <h3>Sarah Williams</h3>
+            <h3>Sarah Chauke</h3>
             <p>House Cleaner</p>
             <div class="worker-rating">
               <i class="fas fa-star"></i>
@@ -615,9 +604,9 @@
       <!-- Worker Card 3 -->
       <div class="worker-card">
         <div class="worker-header">
-          <img src="https://randomuser.me/api/portraits/men/22.jpg" alt="Worker" class="worker-avatar">
+          <img src="assests/David.jpg" alt="Worker" class="worker-avatar">
           <div class="worker-info">
-            <h3>David Martinez</h3>
+            <h3>David Nkosi</h3>
             <p>Landscaper</p>
             <div class="worker-rating">
               <i class="fas fa-star"></i>
@@ -645,9 +634,9 @@
       <!-- Worker Card 4 -->
       <div class="worker-card">
         <div class="worker-header">
-          <img src="https://randomuser.me/api/portraits/women/28.jpg" alt="Worker" class="worker-avatar">
+          <img src="assests/Candace.jpg" alt="Worker" class="worker-avatar">
           <div class="worker-info">
-            <h3>Jennifer Lee</h3>
+            <h3>Lindah Gangaa</h3>
             <p>Moving Assistant</p>
             <div class="worker-rating">
               <i class="fas fa-star"></i>
@@ -675,9 +664,9 @@
       <!-- Worker Card 5 -->
       <div class="worker-card">
         <div class="worker-header">
-          <img src="https://randomuser.me/api/portraits/men/45.jpg" alt="Worker" class="worker-avatar">
+          <img src="assests/vusi.jpg" alt="Worker" class="worker-avatar">
           <div class="worker-info">
-            <h3>Robert Chen</h3>
+            <h3>Akin Ababio</h3>
             <p>Handyman</p>
             <div class="worker-rating">
               <i class="fas fa-star"></i>
@@ -705,9 +694,9 @@
       <!-- Worker Card 6 -->
       <div class="worker-card">
         <div class="worker-header">
-          <img src="https://randomuser.me/api/portraits/women/63.jpg" alt="Worker" class="worker-avatar">
+          <img src="assests/Faith.jpg" alt="Worker" class="worker-avatar">
           <div class="worker-info">
-            <h3>Amanda Garcia</h3>
+            <h3>Amanda Faith Jallo</h3>
             <p>Housekeeper</p>
             <div class="worker-rating">
               <i class="fas fa-star"></i>
@@ -734,32 +723,6 @@
     </div>
   </div>
 
-   <!-- Review Form -->
-   <section class="review-form">
-    <h2>Leave a Review</h2>
-    <form id="reviewForm">
-      <div class="form-group">
-        <label for="name">Your Name</label>
-        <input type="text" id="name" required>
-      </div>
-      <div class="form-group">
-        <label>Rating</label>
-        <div class="rating-stars" id="ratingStars">
-          <i class="fas fa-star" data-rating="1"></i>
-          <i class="fas fa-star" data-rating="2"></i>
-          <i class="fas fa-star" data-rating="3"></i>
-          <i class="fas fa-star" data-rating="4"></i>
-          <i class="fas fa-star" data-rating="5"></i>
-        </div>
-        <input type="hidden" id="rating" value="0" required>
-      </div>
-      <div class="form-group">
-        <label for="review">Your Review</label>
-        <textarea id="review" required></textarea>
-      </div>
-      <button type="submit" class="submit-btn">Submit Review</button>
-    </form>
-  </section>
   
   <script>
   // View Profile Button Functionality - Now opens a modal
