--- a/settings-employer.html
+++ b/settings-employer.html
@@ -69,6 +69,7 @@
         height: 80px;
         width: auto;
         transition: all 0.3s;
+        border-radius: 10%;
         }
 
         body.dark-mode header {
