--- a/view-application.html
+++ b/view-application.html
@@ -42,8 +42,9 @@
         }
 
         .logo img {
-            width: 40px;
-            height: 40px;
+            width: 60px;
+            height: 60px;
+            border-radius: 50%;
         }
 
         .menu-item {
@@ -281,14 +282,7 @@
             <i class="material-icons">description</i>
             <span>View Applications</span>
         </a>
-        <a href="recommendation.html" class="menu-item">
-            <i class="material-icons">recommend</i>
-            <span>Workers recommendations</span>
-        </a>
-        <a href="payment-summary.html" class="menu-item">
-            <i class="material-icons">payments</i>
-            <span>Payment Summary</span>
-        </a>
+      
         <a href="my-wallet.html" class="menu-item">
             <i class="material-icons">account_balance_wallet</i>
             <span>My Wallet</span>
